--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -63,7 +63,10 @@ hr {
 .article-list {
 	font-family: $ui-font;
 	.article-list-item {
-		border-top: 1px solid rgba(0, 0, 0, 0.1);
+		border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+		&:last-child {
+			border-bottom: none;
+		}
 	}
 }
 
@@ -119,7 +122,6 @@ hr {
 		font-size: 2em;
 	}
 }
-
 
 /* Small tablet portrait */
 @media screen and (min-width: 580px) {
