--- a/css/index.css
+++ b/css/index.css
@@ -159,14 +159,15 @@ a.home-link {
   color: #9b9797; }
   .post-heading .post-title a {
     text-decoration: none; }
-.post-heading .post-time {
+
+.post-time {
   font-family: "Monotype News Gothic W01", sans-serif;
   font-weight: normal;
   font-size: 14px;
   font-size: 0.85rem;
   text-transform: uppercase;
   letter-spacing: 1px;
-  color: #b3b3b3; }
+  color: #505050; }
 
 .site-footer {
   background-color: #343232;
@@ -237,7 +238,9 @@ hr {
 .article-list {
   font-family: "Monotype News Gothic W01", sans-serif; }
   .article-list .article-list-item {
-    border-top: 1px solid rgba(0, 0, 0, 0.1); }
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
+    .article-list .article-list-item:last-child {
+      border-bottom: none; }
 
 .post-title {
   font-family: "Monotype News Gothic W01", sans-serif;
@@ -290,7 +293,7 @@ hr {
   .footer-module {
     font-size: 1em; } }
 body {
-  border-top: 3px solid; }
+  border-top: 0.25em solid; }
 
 blockquote {
   margin-bottom: 1.5em; }
@@ -302,9 +305,13 @@ ul {
   ul li {
     margin: 0; }
 
-.page-wrapper {
+.page-wrapper, .footer-wrapper {
   margin: 0 auto;
-  padding: 0 0.5em; }
+  padding: 0 0.5em;
+  width: 90%; }
+
+.page-wrapper {
+  padding-bottom: 3em; }
 
 .site-header {
   display: block;
@@ -334,6 +341,8 @@ ul {
     padding-top: 1.3em;
     font-weight: normal;
     font-style: italic; }
+  .post-content li {
+    padding: 0 1em; }
 
 .article-list {
   margin-top: 15%; }
@@ -346,8 +355,6 @@ ul {
 
 .post-content {
   margin-bottom: 4.5em; }
-  .post-content li {
-    padding-left: 0; }
 
 .post-footer nav {
   padding: 0.2em 0.35em 0.2em 0; }
@@ -358,57 +365,22 @@ ul {
     display: block; }
 
 .site-footer .footer-module {
-  padding: 1em 2em;
-  padding-bottom: 3em; }
-  .site-footer .footer-module .footer-module-heading {
-    margin: 0.5em auto; }
+  padding: 1em 0; }
   .site-footer .footer-module .footer-content {
     margin-top: 0;
     margin-bottom: 0; }
 
-/* Smartphone portrait */
-@media all and (min-width: 320px) {
-  .page-wrapper {
-    width: 90%; }
-
-  .post-content li {
-    padding-bottom: 1em; } }
-/* Smartphone landcape */
-@media screen and (min-width: 480px) {
-  .post-content li {
-    padding-left: 1em; } }
 /* Large tablet */
 @media all and (min-width: 670px) {
-  .page-wrapper {
-    padding-bottom: 3em;
+  .page-wrapper, .footer-wrapper {
     max-width: 620px;
     max-width: 37.5rem; }
 
-  .footer-module {
-    display: block;
-    width: 37.5%;
+  .footer-module:first-child {
+    width: 70%;
+    padding-right: 10%;
     float: left; }
-    .footer-module.footer-module--extra {
-      clear: both;
-      width: 15%; } }
-@media screen and (min-width: 800px) {
-  .home-link {
-    position: relative;
-    left: -60%; } }
-@media screen and (min-width: 960px) {
-  .footer-module {
-    width: 30%; }
-    .footer-module.footer-module--extra {
-      width: 15%;
-      clear: none;
-      float: left; } }
-/* Tablet - Landscape */
-@media all and (min-width: 1024px) {
-  .page-wrapper {
-    padding-bottom: 3em; } }
-/* Laptop */
-@media all and (min-width: 1280px) {
-  .page-wrapper {
-    padding-bottom: 4em; } }
+  .footer-module:last-child {
+    float: right; } }
 
 /*# sourceMappingURL=index.css.map */
